Add method for changing TTL
