# docs/management-api/management-api-swagger2.yml
@@ -131,6 +131,39 @@ paths:
           $ref: '#/responses/badRequest'
         '401':
           $ref: '#/responses/unauthorized'
+  /streams/changeTtl:
+    post:
+      tags:
+        - stream
+      summary: Change stream ttl
+      description: Change stream ttl
+      operationId: changeStreamTtl
+      produces:
+        - application/json
+      parameters:
+        - $ref: '#/parameters/apiKey'
+        - name: stream
+          in: query
+          description: Stream name
+          required: true
+          type: string
+          pattern: '[a-z0-9_]{1,48}'
+        - name: newTtl
+          in: query
+          description: New ttl
+          required: true
+          type: integer
+      responses:
+        '200':
+          $ref: '#/responses/success'
+        '400':
+          $ref: '#/responses/badRequest'
+        '401':
+          $ref: '#/responses/unauthorized'
+        '403':
+          $ref: '#/responses/forbidden'
+        '404':
+          $ref: '#/responses/notFound'
   /streams/info:
     get:
       tags:
@@ -234,6 +267,39 @@ paths:
           $ref: '#/responses/badRequest'
         '401':
           $ref: '#/responses/unauthorized'
+  /timelines/changeTtl:
+    post:
+      tags:
+        - timeline
+      summary: Change timeline ttl
+      description: Change timeline ttl
+      operationId: changeTimelineTtl
+      produces:
+        - application/json
+      parameters:
+        - $ref: '#/parameters/apiKey'
+        - name: timeline
+          in: query
+          description: Timeline name
+          required: true
+          type: string
+          pattern: '[a-z0-9_]{1,48}'
+        - name: newTtl
+          in: query
+          description: New ttl
+          required: true
+          type: long
+      responses:
+        '200':
+          $ref: '#/responses/success'
+        '400':
+          $ref: '#/responses/badRequest'
+        '401':
+          $ref: '#/responses/unauthorized'
+        '403':
+          $ref: '#/responses/forbidden'
+        '404':
+          $ref: '#/responses/notFound'
   /timelines/info:
     get:
       tags:
